--- a/ShoesASP/Views/Shoes/Create.cshtml
+++ b/ShoesASP/Views/Shoes/Create.cshtml
@@ -20,7 +20,7 @@
             <div class="form-group">
                 <label asp-for="BrandId" class="control-label"></label>
                 <select asp-for="BrandId" class="form-control" asp-items="ViewBag.Brands"></select>
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <span asp-validation-for="BrandId" class="text-danger"></span>
             </div>
 
             <div class="form-group">
